web-ide: Fixed layout problems
- Added breakpoint changes for better layout in tablet portrait/smaller
- Fixed flex issues causing results section to shrink/expand
- Replaced some bulma imports to reduce bulk

--- a/src/web-ide/src/style.scss
+++ b/src/web-ide/src/style.scss
@@ -12,11 +12,32 @@
 @use "~bulma/sass/elements/button";
 @use "~bulma/sass/elements/table";
 @use "~bulma/sass/elements/title";
-@use "~bulma/sass/components/card";
 @use "~bulma/sass/components/message";
+@use "~bulma/sass/utilities/mixins";
+
+$breakpoint: 835px;
+
+#main {
+    display: flex;
+    @include mixins.until($breakpoint) {
+        display: block;
+    }
+}
 
 #right {
     height:90vh;
+    width: 50%;
+
+    @include mixins.until($breakpoint) {
+        width: 100%;
+        margin-top: 40px;
+        margin-bottom: 40px;
+        height: 60vh;
+    }
+}
+
+#right > div {
+    height: 100%;    
 }
 
 section {
@@ -30,18 +51,27 @@ section {
 }
 
 #left {
-    max-height:90vh;
+    width: 50%;
+    max-height: 90vh;
+    padding-right: 30px;
+
+    @include mixins.until($breakpoint) {
+        width: 100%;
+        max-height: fit-content;
+        padding-right: 0px;
+    }
 }
 
-#left-bottom {
-    overflow-y: hidden;
+#left > div {
+    height: 100%;
 }
 
-div.card {
+
+div.info-box {
     height:100%
 }
 
-div.card-content {
+div.info-box > div {
     height: 100%;
 }
 
